--- a/Mac/Mu.app/Contents/Resources/app/main.css
+++ b/Mac/Mu.app/Contents/Resources/app/main.css
@@ -97,6 +97,8 @@ body.search #info {
 	padding: 0 10px;
 	box-sizing: border-box;
 	text-align: center;
+    cursor: pointer;
+    overflow:hidden;
 	display: none;
 }
 @media (max-width:540px){ 
@@ -121,7 +123,7 @@ body.search .row {
 }
 
 .title {
-	width: 94%;
+	width: 100%;
 	text-overflow: ellipsis;
 	overflow: hidden;
 	white-space: nowrap;
@@ -130,13 +132,18 @@ body.search .row {
 	cursor: default;
 }
 
+/*
 .play {
-	text-align: right;
-	float: left;
-	width: 6%;
-	color: #fff;
-	cursor: pointer;
+    text-align: right;
+    float: left;
+    width: 6%;
+    height: 34px;
+    color: #fff;
+    opacity: 0.2;
+    background: url(icons/play.png) 50% 50% / contain no-repeat;
+    transition:0.25s opacity ease-in-out;
 }
+*/
 
 a.download {
 	display: inline-block;
@@ -245,6 +252,7 @@ input:focus {
 	height: 60px;
     line-height:60px;
 	color: #fff;
+    cursor: pointer;
 	border-top:1px solid rgba(255, 255, 255, 0.2);
 	box-shadow: border-box;
     z-index: 9999;
@@ -252,9 +260,18 @@ input:focus {
 
 #player .play-pause {
 	width: 60px;
+    height:60px;
 	text-align: center;
 	border-right: 1px solid rgba(255, 255, 255, 0.2);
 	box-sizing: border-box;
+    background:url(icons/player-sprite.png) 50% 50% / cover no-repeat;
+    transition:0.35s ease-in-out;
+}
+#player .play-pause.pause{
+    background:url(icons/player-sprite.png) 50% 0% / cover no-repeat;
+}
+#player .play-pause.loading{
+    background:url(icons/player-sprite.png) 50% -50% / cover no-repeat;
 }
 
 #player .time {
@@ -267,7 +284,19 @@ input:focus {
 	padding-top:5px;
 	text-align: center;
 	border-right:1px solid rgba(255, 255, 255, 0.2);
+    background:url(icons/player-sprite.png) 50% 150% / cover no-repeat;
 	box-sizing: border-box;
+    transition:0.35s ease-in-out;
+}
+#player .time:hover{
+     background:url(icons/player-sprite.png) 50% 100% / cover no-repeat
+}
+#player .time span {
+    transition:0.35s ease-in-out;
+}
+#player .time:hover span {
+    transform:translate3d(0,60px,0);
+    opacity:0;
 }
 
 #player .track-title {
@@ -290,7 +319,6 @@ input:focus {
 	left: 120px;
 	bottom: 0;
 	height: 60px;
-	cursor: pointer;
     white-space: nowrap;
 }
 
